April 28, 2023 @ 22:00 UTC-6
- Add missing unit to character map

March 31, 2023
- Change some back end stuff