@@ -3,8 +3,8 @@
 	"name" : "Streamlined FBIs",
 	"description" : "Ports Streamlined Heisting's drastically improved FBI units to vanilla",
 	"author" : "Hoppip, made standalone by moon",
-	"contact" : "https://modworkshop.net/user/55749",
-	"version" : "4.7.1",
+	"contact" : "https://modworkshop.net/mod/41728",
+	"version" : "4.8.1",
 	"color" : "0.043 0.808 0.6",
 	"image" : "mod.png"
 
