@@ -1,3 +1,7 @@
+December 5, 2023 @ 00:00 UTC-6
+- No longer add duplicate entries to character map if they already exist
+- Shouldn't produce errors on startup when playing with Eclipse anymore
+
 April 28, 2023 @ 22:00 UTC-6
 - Add missing unit to character map
 
